# nonstandard-cpp-library

./: CMakeLists.txt  README.md  a.out  any.cpp  swap.hpp  test_swap.cpp
.github/workflows/: tests.yaml
include/containers/: vector.hpp
include/memory/: new.hpp
include/string/: string.hpp
include/type_traits/base_classes/: integral_constant.hpp
include/type_traits/logical_operations/: conjunction.hpp
include/type_traits/other/: print.hpp
include/type_traits/primary_type_categories/: is_array.hpp  is_class.hpp  is_floating_point.hpp  is_integral.hpp  is_null_pointer.hpp  is_void.hpp
include/type_traits/type_relationships/: is_same.hpp  is_same_many.hpp
move/: forward.hpp  move.hpp
src/memory/: new.cpp
src/string/: string.cpp
tests/containers/: a.out  vector.cpp
tests/memory/: new_test.cpp
tests/string/: string_test.cpp
tests/type_traits/: a.out  primary_traits.cpp
type_traits/: a.out  enable_if.hpp  is_prime.hpp  is_same_many.hpp  primary_traits.hpp  tests.cpp
